tests/reference/asr-implicit_call_02-acc6d43.stderr
semantic error: Type mismatch in argument `x`: expected `integer[:]` but got `integer(8)[:]`
 --> tests/errors/implicit_call_02.f90:9:19
  |
9 |     call test_sub(arr)
  |                   ^^^ 
